apps/admin/assets/css/carbon.css
@import 'carbon-components/css/carbon-components.css';

.bx--data-table-header,
.bx--data-table tbody,
.bx--data-table tbody tr td,
.bx--pagination,
.bx--pagination .bx--select-input {
	background-color: #ffffff;
}

.bx--toast-notification--error {
	width: 100%;
	margin: 0;
}

.bx--header {
	background-color: #ffffff;
	border-color: #c6c6c6;
	justify-content: space-between;
}

.bx--header__menu-trigger > svg {
	fill: #000000;
}

.bx--header__action:hover {
	svg {
		fill: #ffffff;
	}
}

.bx--header__action:focus {
	border-color: transparent;
}

.bx--overflow-menu-options {
	width: auto;
	background-color: #ffffff;
}

.bx--overflow-menu-options__option-content {
	display: flex;
	align-items: center;
	justify-content: space-between;
	width: 100%;
}

.bx--modal-content p {
	font-size: 14px;
}

.bx--inline-notification {
	max-width: 100%;
}

